# pokebenchmark-emulator

./: .gitignore  README.md  pyproject.toml
pokebenchmark_emulator/: __init__.py  frame.py  gba.py
pokebenchmark_emulator/adapters/: __init__.py  _gen3_mon.py  _gen3_names.py  base.py  emerald.py  firered.py
tests/: test_adapters.py  test_emulator.py
